@@ -10,6 +10,7 @@ Version 0.3z
 * Naga mating scene (written by LonelyRonin) added (requires player being a naga and losing to the naga)
 * The rest of the Terry Get Oral scene implemented, written by LD/QB
 * Gwendy no longer remains in your passive party after you do the Layla sequence.
+* A new scene for the Zebra shaman, written by Bluebusterman: Loss, get fucked. You need a pussy.
 * Various minor bugs fixed
 * Various typos fixed
 
